# lacon

./: .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: build-skill.yml  pages.yml  pre-commit.yml  publish.yml  release.yml  tests.yml
docs/: app.js  index.html  styles.css
plugins/lacon/.codex-plugin/: plugin.json
plugins/lacon/skills/lacon/: SKILL.md
scripts/: build_skill.py
src/lacon/: __init__.py  cli.py  engine.py  primitives.py  shaping.py
tests/: conftest.py  test_cli.py  test_primitives.py  test_primitives_v01.py  test_safety.py  test_shaping.py  test_token_budget.py
tests/fixtures/: sample.csv  sample.jsonl
